--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -193,12 +193,12 @@
     <!-- Short description has to have less than 80 chars -->
     <string name = "app_short_description"> Простий календар з подіями і настроюється віджетом. Без реклами. </string>
     <string name = "app_long_description">
-        Оффлайн календарь, без каких-либо интегрированных сторонних функций. Можно создавать повторяющиеся события и устанавливать напоминания. Есть возможность отображения номеров недель.
-        У приложения есть виджет 4x4 с изменяемым размером, у которого можно изменить цвет текста, цвет и прозрачность фона.
-        Это приложение не показывает рекламу и не запрашивает лишние разрешения. У него полностью открытый исходный код и настраиваемые цвета оформления.
-        Разрешение для доступа к памяти требуется только для экспорта или импорта событий из файлов .ics.
-        Разрешение на чтение контактов требуется только при импорте дней рождения.
-        Это приложение является лишь частью крупной серии приложений. Вы можете найти остальные на http://www.simplemobiletools.com
+        Оффлайн календар, без будь-яких інтегрованих сторонніх функцій. Можна створювати повторювані події і встановлювати нагадування. Є можливість відображення номерів тижнів.
+        У додатку є віджет 4x4 із змінним розміром, у якого можна змінити колір тексту, колір і прозорість фону.
+        Ця програма не показує рекламу і не запрошувати зайві дозволи. У нього повністю відкритий вихідний код і настроюються кольору оформлення.
+        Дозвіл для доступу до пам'яті потрібно тільки для експорту або імпорту подій з файлів .ics.
+        Дозвіл на читання контактів потрібно тільки при імпорті днів народження.
+        Ця програма є лише частиною великої серії додатків. Ви можете знайти інші на http://www.simplemobiletools.com
     </string>
 
     <!--
